# pandas-should-go-extinct

./: .gitattributes  .gitignore  README.md  benchmark_taxi.py  duckdb_1brc.py  main.py  pandas_1brc.py  pandas_duck_hybrid.py  plot_timeseries_results.py  polars_1brc.py  process_benchmark_results.py  process_gtime_results.py  profile.json  profile.sh  pyproject.toml  run_profile.sh
data/: README.md  duckdb.csv  duckdb_timeseries_laptop.csv  pandas.csv  polars.csv  polars_timeseries_laptop.csv
data/taxi/: download.sh  duck_compute.csv  duck_only.csv  duck_read.csv  pandas.csv
figures/: Tools Comparison Gap.excalidraw
slides/: slides.typ  works.bib
slides/figures/: fleet_size_data_comparison.excalidraw  tools_comparison.excalidraw
src/pandas_should_go_extinct/: Benchmark.py  __init__.py  benchmark.py  constants.py  create_1brc_data.py  duckdb_1brc.py  hybrid_duck_brc.py  hybrid_duck_taxi.py  main.py  pandas_1brc.py  polars_1brc.py
tests/: test_1brc.py
tests/fixtures/: simple.csv  simple_with_agg.csv
