[project]
name = "pandas-should-go-extinct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.22.0",
    "duckdb>=1.2.0",
    "matplotlib>=3.10.1",
    "seaborn>=0.13.2",
    "psutil>=7.0.0",
    "s3fs>=2025.3.0",
    "fastparquet>=2024.11.0",
    "pyarrow>=19.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.3.241126"
]
